terraform_final_project/eks-securiy-groups.tf
# resource "aws_security_group" "all_worker_mgmt" {
#   name_prefix = "all_worker_management"
#   vpc_id      = module.vpc.vpc_id

#   ingress {
#     from_port = 22
#     to_port   = 22
#     protocol  = "tcp"

#     cidr_blocks = [
#       "10.0.0.0/8",
#       "172.16.0.0/12",
#       "192.168.0.0/16",
#     ]
#   }
#   ingress {
#     from_port   = 9100
#     to_port     = 9100
#     protocol    = "tcp"
#     cidr_blocks = var.cidr_block
#     description = "prometheus"
#   }
#   ingress {
#     from_port   = 8500
#     to_port     = 8500
#     protocol    = "tcp"
#     cidr_blocks = var.cidr_block
#     description = "prometheus"
#   }
#   ingress {
#     from_port   = 8301
#     to_port     = 8301
#     protocol    = "tcp"
#     cidr_blocks = var.cidr_block
#     description = "Lan"
#   }

#     ingress {
#     from_port   = 8302
#     to_port     = 8302
#     protocol    = "tcp"
#     cidr_blocks = var.cidr_block
#     description = "Wan"
#   }

#   ingress {
#     from_port   = 8301
#     to_port     = 8301
#     protocol    = "udp"
#     cidr_blocks = var.cidr_block
#     description = "Lan"
#   }
#     ingress {
#     from_port   = 8302
#     to_port     = 8302
#     protocol    = "udp"
#     cidr_blocks = var.cidr_block
#     description = "Wan"
#   }
#   ingress {
#     from_port   = 8600
#     to_port     = 8600
#     protocol    = "tcp"
#     cidr_blocks = var.cidr_block
#     description = "consul dns"
#   }

#     ingress {
#     from_port   = 8600
#     to_port     = 8600
#     protocol    = "udp"
#     cidr_blocks = var.cidr_block
#     description = "consul dns"
#   }
# }
